haskellPackages: edit raehik package maintainership

--- a/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
@@ -398,10 +398,12 @@ package-maintainers:
     - strongweak
     - generic-data-functions
     - binrep
+    - rerefined
+    - symparsec
+    - bytezap
     - bytepatch
     - heystone
     - refined
-    - refined1
     - flatparse
   roberth:
     - arion-compose
