haskellPackages.xnobar: Disable on darwin

--- a/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
@@ -780,6 +780,7 @@ unsupported-platforms:
   xmobar:                                       [ platforms.darwin ]
   xmonad-extras:                                [ platforms.darwin ]
   xmonad-volume:                                [ platforms.darwin ]
+  xnobar:                                       [ platforms.darwin ]
   kmonad:                                       [ platforms.darwin ]
 
 supported-platforms:
