--- a/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix/main.yaml
@@ -170,6 +170,11 @@ package-maintainers:
     - hnix
     - hnix-store-core
     - hnix-store-remote
+  artem:
+    - BNFC-meta
+    - alex-meta
+    - happy-meta
+    - vector-hashtables
   arturcygan:
     - hevm
   athas:
